Enhance SwaggerConfig with contact info