@@ -1,6 +1,6 @@
 package com.finance.dashboard.config;
 
-import java.util.Arrays;
+import java.util.List;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import io.swagger.v3.oas.models.Components;
@@ -9,6 +9,7 @@ import io.swagger.v3.oas.models.info.Info;
 import io.swagger.v3.oas.models.security.SecurityRequirement;
 import io.swagger.v3.oas.models.security.SecurityScheme;
 import io.swagger.v3.oas.models.tags.Tag;
+import io.swagger.v3.oas.models.info.Contact;
 
 @Configuration
 public class SwaggerConfig {
@@ -20,8 +21,12 @@ public class SwaggerConfig {
                         new Info().title("Finance Data Processing Application APIs")
                                 .description("By S Nagarjuna")
                                 .version("1.0.0")
+                                .contact(new Contact()
+                                    .name("S Nagarjuna")
+                                    .email("srinivasnagarjuna04@gmail.com")
+                                )
                 )
-                .tags(Arrays.asList(
+                .tags(List.of(
                         new Tag().name("User APIs").description("Register and Login Users."),
                         new Tag().name("Financial Record APIs").description("Add, Delete, Update, View-All, View-by-filters Financial Records."),
                         new Tag().name("Admin APIs").description("Allows an Admin to create an Admin or Analyst. Update the role of the user and the user's profile status."),
